--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "start": "nodemon --exec babel-node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nodejs", "express", "rest", "api", "mongodb"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "rest",
+    "api",
+    "mongodb"
+  ],
   "author": "Ashraf Hafiz",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.4.6"
+    "mongoose": "^6.4.6",
+    "mongoose-paginate-v2": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
